@@ -150,6 +150,8 @@
         <action id="VimFilterMotion" class="com.maddyhome.idea.vim.action.change.change.FilterMotionAction" text="Filter Lines"/>
         <action id="VimFilterCountLines" class="com.maddyhome.idea.vim.action.change.change.FilterCountLinesAction" text="Filter Lines"/>
         <action id="VimFilterVisualLines" class="com.maddyhome.idea.vim.action.change.change.FilterVisualLinesAction" text="Filter Visual Lines"/>
+        <action id="VimAutoIndentVisual" class="com.maddyhome.idea.vim.action.change.change.AutoIndentVisualAction" text="Auto Indent Selection"/>
+        <action id="VimReformatVisual" class="com.maddyhome.idea.vim.action.change.change.ReformatVisualAction" text="Reformat Selection"/>
 
         <!-- Shift -->
         <action id="VimAutoIndentLines" class="com.maddyhome.idea.vim.action.change.shift.AutoIndentLinesAction" text="Auto Indent Lines"/>
