@@ -21,6 +21,7 @@ Bug Fixes
 - gd and gD now properly save the jump location before moving to the
   declaration.
 - z<Enter>, z-, and z. now move the cursor to the start of the line.
+- Visual mode is now exited after issuing the = or gq command.
 
 0.3.0 to 0.3.1
 
